Added some minor changes to the highlighting as it does not work at the moment, also changed a bug where the name of the books does not show correctly due to incorrect use of getShow2() instead of getShow() and added a threaded way to load the previews to not hang up the server:

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -655,11 +655,11 @@ function init() {
 			  }
 			  else
 			  {
-			  	resultLinks.innerHTML = resultLinks.innerHTML + " " + "<a href='#page"+searchResults.pages[i].page+"' onclick='ShowOCR(this);return true;'>" + searchResults.pages[i].page + " ("
+			  	resultLinks.innerHTML = resultLinks.innerHTML + " " + "<a onclick='window.location.replace(\"#page"+searchResults.pages[i].page+"\");ShowOCR(this);return true;'>" + searchResults.pages[i].page + " ("
 				  + "<span id='pageHitList"+searchResults.pages[i].page +"'>"					 
 				  + searchResults.pages[i].word + "</span>)</a>";
 			  }
-			pageVal[searchResults.pages[i].page-1]=pageVal[searchResults.pages[i].page-1].replace(new RegExp('(\\b'+searchResults.pages[i].word+'\\b)','gi'),'<mark>$1</mark>');
+			pageVal[searchResults.pages[i].page-1]=pageVal[searchResults.pages[i].page-1].replace(new RegExp('(\\b'+searchResults.pages[i].word.replace(/[-[\]{}()*+?.,\\^$|#\s]/g, '\\$&')+'\\b)','gi'),'<mark>$1</mark>');
 		  }
 		}
 	GetOCRTxt();
