--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -337,7 +337,7 @@ class PageLoader {
 }
 
 let pageLoader = new PageLoader(); 
-
+let pageVal = [];
 function getVisiblePages()
 {
 	let allPages = document.querySelectorAll("div.page");
@@ -447,10 +447,10 @@ function GetOCRTxt() {
 }
 
 
-let pageVal = [];
 
 function loadExcept(x)
 {
+	console.log("Loading stuff");
 	let lst = document.getElementsByClassName("ocrpage");
 	for(var i = 0; i < lst.length; i++)
 	{
@@ -460,7 +460,7 @@ function loadExcept(x)
 
 async function deleteAll()
 {
-let lst = document.getElementsByClassName("ocrpage");
+	let lst = document.getElementsByClassName("ocrpage");
 	for(var i = 0; i < lst.length; i++)
 	{
 			lst[i].innerHTML = "";
@@ -479,8 +479,8 @@ function UpdateOCRTxt(x,res)
 	let lst = document.getElementsByClassName("ocrpage");
 	for(var i = 0; i < lst.length; i++)
 	{
-		pageVal[i] = lst[i].innerHTML;
-		lst[i].innerHTML = "";
+		//pageVal[i] = lst[i].innerHTML;
+		//lst[i].innerHTML = "";
 	}
 	res(10);
 }
@@ -494,7 +494,7 @@ let onChangeFunc = function() {};
 
 function ShowInfoText()
 {
-	deleteAll();
+	//deleteAll();
   	document.getElementsByClassName("pageContainer")[0].style["grid-template-columns"] = "60% 40% 0%";
 	document.getElementById("InfoScreen").style.display = "inline-grid";
 	HighlightButton(document.getElementById("ShowInfoButton"));
@@ -514,7 +514,7 @@ function ShowOCR(a) {
 	document.getElementsByClassName("pageContainer")[0].style["grid-template-columns"] = "60% 0% 40%";
 	
 	document.getElementById("InfoScreen").style.display = "none";
-	loadExcept();
+	//loadExcept();
     HighlightButton(document.getElementById("ShowOCRButton"));
 	if(a===undefined)
 	{
@@ -618,6 +618,7 @@ function init() {
 		document.getElementById("linkList").innerHTML = "Loading ocr file...";
 
 		waitforocr.then(function(vwhatyever){
+		let ocrlst = document.getElementsByClassName("ocrpage");
 		
 		if(searchResults.is_fuzzy === false)
 		{
@@ -634,8 +635,11 @@ function init() {
 			for(let y = 0; y < HighlightList.length; y++)
 			{
 				//TODO: Search Dieter with full search and get the results to be highlighted....
-				pageVal[pagesList[i]-1]=pageVal[pagesList[i]-1].replace(new RegExp('(\\b'+HighlightList[y]+'\\b)','gi'),'<mark>$1</mark>');
-
+				console.log("show me what: "+HighlightList[y]);
+				let strts = ocrlst[pagesList[i]-1].innerHTML;
+				console.log(strts);
+				ocrlst[pagesList[i]-1].innerHTML=strts.replace(new RegExp(' '+HighlightList[y]+' ','gi'),'<mark>'+HighlightList[y]+'</mark>');
+			
 			}
 		  }
 
