Set the service to automatic restart and set the working directory to the right value. added a debug file for easy debug output and easy printing at which function the error was generated. Changed the default setup of nginx for the right authentification added the user system from the old branch and added a basic initialiser if there is no user table present. Changed the main to rightly log in user and authorize requests to files. Added a url parser to parse xml-xhttp encoded post requests. Changed the Search and the guest_index in a way that they can easily login to the new server.

--- a/web/Search.html
+++ b/web/Search.html
@@ -299,6 +299,7 @@ mark {
 		</style>
 
 		<script>
+			let ServerDataObj = {};
 
 			let search_parameters = {};
 let default_search_parameters = {};
@@ -307,12 +308,12 @@ class User {
 	//Static because it does not matter which user asks to end his session
 	static DoLogout() {
 		//Just tell the server to log the current user out, then reload the page
-		let xhr = new XMLHttpRequest();
-		xhr.open("POST","/logout",true);
-		xhr.onload = function() {
-			window.location.href = "/";
-		}
-		xhr.send(null);
+		 var now = new Date();
+  		var time = now.getTime();
+  		var expireTime = time - 10;
+  		now.setTime(expireTime);
+  		document.cookie = 'SESSID=;expires='+now.toGMTString()+';';
+		window.location = window.location;
 	}
 
 	static initialise() {
@@ -328,12 +329,31 @@ class User {
 		//	document.getElementById("srchButton").click();
 		//});
 
+		let vars = document.cookie;
+		console.log("Document cookie: "+ document.cookie);
+		let pos = vars.indexOf("SESSID=");
+		if(pos!=-1)
+		{
+			let numpos = vars.indexOf(";",pos+7);
+			let cookie = "";
+			if(numpos==-1)
+				cookie = vars.substr(pos+7);
+			else
+				cookie = vars.substr(pos+7,numpos);
+
+			console.log(cookie);
+			let pos2 = cookie.indexOf("::");
+			ServerDataObj.user = {};
+			ServerDataObj.user.email = cookie.substr(0,pos2);
+			ServerDataObj.user.access = parseInt(cookie.substr(pos2+2,cookie.indexOf(":::")));
+		}
+
 		if(ServerDataObj==undefined)
 			alert("Site internal error");
 		else if(ServerDataObj.user == undefined)
 		{
 				let x = document.getElementById("loggedintopnav");
-				x.innerHTML = '<form id ="LoginForm" class="form-inline my-2 my-lg-0" action="/" method="post"><input id="EmailType" class="form-control mr-sm-2" type="email" name="email" placeholder="Email" aria-label="Email" required><input id="PasswordType" class="from-control mr-sm-2" type="password" name="password" placeholder="Password" aria-label="Password" required><input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Log In"/></form>';
+				x.innerHTML = '<form id ="LoginForm" class="form-inline my-2 my-lg-0" action="/login" method="post"><input id="EmailType" class="form-control mr-sm-2" type="email" name="email" placeholder="Email" aria-label="Email" required><input id="PasswordType" class="from-control mr-sm-2" type="password" name="password" placeholder="Password" aria-label="Password" required><input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Log In"/></form>';
 		}
 		else
 		{
