--- a/web/guest_index.html
+++ b/web/guest_index.html
@@ -460,7 +460,7 @@ window.addEventListener("load",User.initialise,false);
   <a class="classifiedContent" href="/uploadbook" data-acc=2>Upload Books</a>
   <a class="classifiedContent" href="/managebooks" data-acc=2>Manage Books</a>
     <div class="topnav-right">
-	   <form id ="LoginForm" class="form-inline my-2 my-lg-0" action="/" method="post">
+	   <form id ="LoginForm" class="form-inline my-2 my-lg-0" action="/login" method="post">
       <input id="EmailType" class="form-control mr-sm-2" type="email" name="email" placeholder="Email" aria-label="Email" required>
       <input id="PasswordType" class="from-control mr-sm-2" type="password" name="password" placeholder="Password" aria-label="Password" required>
       <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Log In"/>
