--- a/web/Search.html
+++ b/web/Search.html
@@ -299,8 +299,6 @@ mark {
 		</style>
 
 		<script>
-			let ServerDataObj = {};
-
 			let search_parameters = {};
 let default_search_parameters = {};
 //Handles all the User related stuff
@@ -700,7 +698,7 @@ function sendToPage(name)
 	let inputObj = document.getElementById(name);
 	let input = inputObj.value;
 	//Form the request for the server
-	let requ = "/searchword?search="+encodeURIComponent(input);
+	let requ = "/search?q="+encodeURIComponent(input);
 	console.log(requ);
 
 	//Create the json file with the advanced search options
@@ -729,78 +727,8 @@ function sendToPage(name)
 		}
 	}
 	requ+=val;	
-  	document.getElementById("ResultBanner").innerHTML	= "<p class='divsearch'><span id='inumbermessage'></span><span id='innumberprog'>0</span>%<progress class='progbar' value=0 max=100 id='srchProgress'></progress></p>"; 
 
-	//TODO: Delete debug logs
-	console.log(requ);
-	let xhr = new XMLHttpRequest();
-	xhr.open("GET",requ,true);
-
-
-	//Clear the results of the last search
-	let obj = document.getElementById("SearchHitList");
-	obj.innerHTML = "";  
-
-
-	xhr.onload = function() {
-		if(xhr.status!=200)
-		{
-			alert("Something went wrong please show this message to your server administrator Error code E001");
-			return;
-		}
-		
-		let jsSearchId = JSON.parse(xhr.responseText);
-
-
-		let realSearch = new XMLHttpRequest();
-		gCurrentSearchId = jsSearchId.searchid;
-		realSearch.open("GET","/startSearch?searchID="+jsSearchId.searchid,true);
-
-		realSearch.onload = function() {
-
-		document.getElementById("ResultBanner").innerHTML = "";	
-		//First of all log the response for debug purposes
-		console.log(xhr.responseText);
-
-		//Parse the received json file
-		jsonObj = JSON.parse(realSearch.responseText);
-		lastInput = input;
-		if(jsonObj === null)
-		{
-			alert("No results found!");
-			return;
-		}
-		//corrupted json? Show error message
-		if(jsonObj.books==undefined)
-		{
-			alert("Received corrupted JSON File!");
-			return;
-		}
-
-
-
-		if(document.getElementById("sortway").value == "sortbyalphabeticalaz")
-		{
-			jsonObj.books.sort(function(a,b){if(a.description[0]==',') return 1;if(b.description[0]==',') return -1;
-			if(a.description.toUpperCase()>b.description.toUpperCase())return 1;if(b.description.toUpperCase()>a.description.toUpperCase()) return -1;return 0;});
-		}
-
-		if(document.getElementById("sortway").value == "sortbyalphabeticalza")
-		{
-			jsonObj.books.sort(function(a,b){
-			if(a.description[0]==',') return -1;if(b.description[0]==',') return 1;
-					 if(a.description.toUpperCase()<b.description.toUpperCase())return 1;if(b.description.toUpperCase()<a.description.toUpperCase()) return -1;return 0;});
-		}
-
-		jsonObj.show_from = 0;
-		jsonObj.show_to = Math.min(10,jsonObj.books.length);
-		obj.drawablejson = jsonObj;
-		ShowSelectedValues(obj);
-	}
-	realSearch.send();
-	window.setTimeout(function(){UpdateProgress(jsSearchId.searchid);},3000);
-	}
-	xhr.send();
+       	window.location = requ;
 }
 
 function SelectAll(y)
