--- a/web/Search.html
+++ b/web/Search.html
@@ -8,6 +8,7 @@
 		<!--<link rel="stylesheet" href="style.css">-->
 		<title>Search - clas digital</title>
 
+		<style src="web/topnav.css"></style>
 		<style>
 
 
@@ -427,13 +428,6 @@ function openSearchOpts(name)
 {
 
 	LoadSearchData(search_parameters);
-	//Create the json file with the advanced search options
-	//document.getElementById("FuzzyID").value = search_parameters.fuzzyness;
-//	document.getElementById("SearchInTitle").checked = search_parameters.title_only;
-//	document.getElementById("SearchForAuthor").value = search_parameters.author_name;
-//	document.getElementById("PublicatedAfter").value = search_parameters.pub_after;
-//	document.getElementById("PublicatedBefore").value = search_parameters.pub_before;
-//	document.getElementById("SearchInOCR").value = search_parameters.ocr_only;
 
 
 	//Get the modal banner which contains all the advanced options
@@ -519,39 +513,6 @@ function OpenFilter()
 			advancedOpts.style.display = "none";
 		}
 	}
-}
-
-function UpdateProgress(sid)
-{
-		let progHandler = new XMLHttpRequest();
-
-		progHandler.open("GET","/getSearchProgress?searchID="+sid,true);
-		progHandler.onload = function() {
-			if(progHandler.status!=200)
-				return;
-
-			let jsObj = JSON.parse(progHandler.responseText);
-			if(jsObj!=null)
-			{
-				let prog = jsObj.progress;
-				if(Math.floor(prog)==-1)
-					prog = 1.0;
-
-				if(document.getElementById('srchProgress')==null)
-					 {
-
-					 return;
-					 }
-
-				document.getElementById('srchProgress').value = Math.floor(prog*100);
-				document.getElementById('innumberprog').innerHTML = Math.floor(prog*100);
-				document.getElementById("inumbermessage").innerHTML =  "<strong>"+jsObj.message+"</strong>";
-				if(Math.floor(jsObj.progress)==-1)
-					return;
-			}
-			window.setTimeout(function(){UpdateProgress(sid);},500);
-		}
-		progHandler.send(null);
 }
 
 function ShowSelectedValues(obj)
@@ -843,59 +804,6 @@ window.addEventListener("load",User.initialise,false);
 		</script>
 		<style>
 
-.topnav {
-	top:0;
-	left:0;
-	width: 100vw;
-	z-index: 1;
-	position: fixed;
-	background-color: #333;
-	overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a,.topnav .topnav-right a{
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 1em 1em;
-	text-decoration: none;
-	font-size: 1em;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-	transition: all 0.4s ease;
-	background-color: #ddd;
-	color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-	background-color: #c66900;
-	color: white;
-}
-
-/* Right-aligned section inside the top navigation */
-.topnav-right {
-	float: right;
-}
-
-.topnav-right button{
-	box-sizing: border-box;
-	padding: 0.4em 0.8em;
-	margin: 0.5em 0.8em;
-}
-
-.topnav-right span {
-	box-sizing: border-box;
-	color: #f2f2f2;
-	font-size: 1.2em;
-	text-align: center;
-	height: 100%;
-}
-
-
  /* Customize the label (the container) */
 .container {
   display: block;
@@ -972,12 +880,7 @@ window.addEventListener("load",User.initialise,false);
 	margin-top: 1rem;
 }
 
-.topnav-right form {
-	box-sizing: border-box;
-	vertical-align: center;
-	padding: 0.4em 0.8em;
-	margin: auto;
-}
+
 		</style>
 	<script>
 		function ExecuteInitialise()
