--- a/web/private/admin/Administration.html
+++ b/web/private/admin/Administration.html
@@ -24,38 +24,8 @@
 }
 </style>
 
+<script src="/user.js"></script>
 <script>
-
-//Handles all the User related stuff
-class User {
-  //Static because it does not matter which user asks to end his session
-  static DoLogout() {
-    //Just tell the server to log the current user out, then reload the page
-    let xhr = new XMLHttpRequest();
-    xhr.open("POST","/logout",true);
-    xhr.onload = function() {
-        window.location.href = "/";
-    }
-    xhr.send(null);
-  }
-
-  static initialise() { 
-		document.getElementById("LoggedInAs").innerHTML = "Logged in as <strong>"+ServerDataObj.user.email+"</strong>";
-
-			let list = document.getElementsByClassName("classifiedContent");
-			//Unlocks all the content that the user can access!
-			for(var i=0; i < list.length; i++)
-			{
-				let y = list[i].dataset.acc;
-				if((ServerDataObj.user.access&y)!=0)
-				{
-					list[i].style.display="block";
-				}
-			}
-    OnUserList();
-  }
-}
-
 //Create an enum to identify the valid types of State Banner changes
 var StateBannerType = {"success":1,"danger":2,"warning":3,"info":4,"release":5};
 Object.freeze(StateBannerType);
@@ -252,71 +222,13 @@ function UpdateValues(elem)
     UserList[elem.from_who] = (UserList[elem.from_who]&(~(1<<elem.which_attr)))|(elem.checked<<elem.which_attr);
 }
 
-window.addEventListener("load",User.initialise,false);
+window.addEventListener("load",function(){User.initialise("administrationlink");},false);
 </script>
-<style>
-
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a,.topnav .topnav-right a{
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 1em 1em;
-  text-decoration: none;
-  font-size: 1em;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  transition: all 0.4s ease;
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #c66900;
-  color: white;
-}
-
-/* Right-aligned section inside the top navigation */
-.topnav-right {
-  float: right;
-}
-
-.topnav-right button{
-	box-sizing: border-box;
-	padding: 0.4em 0.8em;
-	margin: 0.5em 0.8em;
-}
-
-.topnav-right span {
-	box-sizing: border-box;
-	color: #f2f2f2;
-	font-size: 1.2em;
-	text-align: center;
-	height: 100%;
-}
-
-</style>
+<link href="/topnav.css" rel="stylesheet" type="text/css">
   </head>
 <body>
 <!-- The navigation bar config -->
- <div class="topnav">
-  <a href="/home">Home</a>
-  <a href="/search">Search</a>
-  <a class="classifiedContent active" href="/administration" data-acc=4>Administration</a>
-  <a class="classifiedContent" href="/uploadbook" data-acc=2>Upload Books</a>
-  <a class="classifiedContent" href="/managebooks" data-acc=2>Manage Books</a>  <div class="topnav-right">
-	  <span id="LoggedInAs">Logged in</span>
-      <button id="logoutBut" class="btn btn-outline-info" onclick='User.DoLogout()'>Logout</button>
-  </div>
-</div>
+ <div id='tpnav' class="topnav"></div>
 <div id="StateBanner"></div>
 <ul id="CreateUser" class="list-group list-group-flush">
     <li class="list-group-item">
