--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Manage books - clas digital</title>
+<link href="/topnav.css" rel="stylesheet" type="text/css">
 <style>
 
 
@@ -62,7 +63,7 @@
 	max-width: 100%;
 }
 </style>
-
+<script src="/user.js"></script>
 <script>
 function validURL(str) {
   var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
@@ -464,35 +465,12 @@ function SlideBack()
 	return true;
 }
 
-//Handles all the User related stuff
-class User {
-  //Static because it does not matter which user asks to end his session
-  static DoLogout() {
-    //Just tell the server to log the current user out, then reload the page
-    let xhr = new XMLHttpRequest();
-    xhr.open("POST","/logout",true);
-    xhr.onload = function() {
-        window.location.href = "/";
-    }
-    xhr.send(null);
-  }
-
-  static initialise() {
-    		document.getElementById("LoggedInAs").innerHTML = "Logged in as <strong>"+ServerDataObj.user.email+"</strong>";
-
-			let list = document.getElementsByClassName("classifiedContent");
-			//Unlocks all the content that the user can access!
-			for(var i=0; i < list.length; i++)
-			{
-				let y = list[i].dataset.acc;
-				if((ServerDataObj.user.access&y)!=0)
-				{
-					list[i].style.display="block";
-				}
-			}
+function GetBooklist()
+{
 	let xhr = new XMLHttpRequest();
 	  xhr.open("GET","/getBookRessources",true);
 	xhr.onload = function() {
+		if(xhr.status!=200) return;
 		allBooksJS = JSON.parse(xhr.responseText);
 		let ls = document.getElementById("BookContainer");
 		let maxItems = 0;
@@ -530,101 +508,11 @@ class User {
 		ls.innerHTML = xl;
 	}
 	xhr.send(null);
-  }
 }
 
-
-
-//Create an enum to identify the valid types of State Banner changes
-var StateBannerType = {"success":1,"danger":2,"warning":3,"info":4,"release":5};
-Object.freeze(StateBannerType);
-
-//Shows a banner at the top of the screen, used to inform the user of errors and success
-class StateBanner {
-  static ChangeBanner(msg, type)
-  {
-    //Show the new banner message
-    let alt = document.getElementById("StateBanner");
-    let newHTML = "<strong>";
-    newHTML+= msg;
-    newHTML+="</strong>";
-    alt.innerHTML = newHTML;
-
-    //Decide what kind of layout the banner should show
-    if(type===StateBannerType.success)
-    {
-        alt.setAttribute("class","alert alert-success");
-    }
-    else if(type===StateBannerType.danger)
-    {
-        alt.setAttribute("class","alert alert-danger"); 
-    }
-    else if(type===StateBannerType.warning)
-    {
-        alt.setAttribute("class","alert alert-warning"); 
-    }
-    else if(type===StateBannerType.info)
-    {
-        alt.setAttribute("class","alert alert-info"); 
-    }
-    else if(success==StateBannerType.release)
-    {
-        alt.setAttribute("class","None");
-        alt.innerHTML = "";
-    }
-  }
-}
-
-window.addEventListener("load",User.initialise,false);
+window.addEventListener("load",function(){User.initialise("managebookslink");GetBooklist();},false);
 </script>
 <style>
-
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a,.topnav .topnav-right a{
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 1em 1em;
-  text-decoration: none;
-  font-size: 1em;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  transition: all 0.4s ease;
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #c66900;
-  color: white;
-}
-
-/* Right-aligned section inside the top navigation */
-.topnav-right {
-  float: right;
-}
-
-.topnav-right button{
-	box-sizing: border-box;
-	padding: 0.4em 0.8em;
-	margin: 0.5rem 0.8em;
-}
-
-.topnav-right span {
-	box-sizing: border-box;
-	color: #f2f2f2;
-	font-size: 1.2em;
-	text-align: center;
-	height: 100%;
-}
 
 .GeneralPageLayout {
 	padding: 1.5rem;
@@ -805,17 +693,7 @@ h1 {
   </head>
 <body>
 <!-- The navigation bar config -->
- <div class="topnav">
-  <a href="/home">Home</a>
-  <a href="/search">Search</a>
-  <a class="classifiedContent" href="/administration" data-acc=4>Administration</a>
-  <a class="classifiedContent" href="/uploadbook" data-acc=2>Upload Books</a>
-  <a class="classifiedContent active" href="/managebooks" data-acc=2>Manage Books</a>
-  <div class="topnav-right">
-	  <span id="LoggedInAs">Logged in</span>
-      <button id="logoutBut" class="btn btn-outline-info" onclick='User.DoLogout()'>Logout</button>
-  </div>
-</div>
+ <div id='tpnav' class="topnav"></div>
 <div id="StateBanner"></div>
 <div id="BookInfoPage" class="GeneralPageLayout">
 	<h1><input id="fuzzysearchlist" oninput="fuzzysearchbooks(this);" class="inputHeader" type="text" placeholder="Search for books"></input></h1>
