--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -516,10 +516,10 @@ window.addEventListener("load",function(){User.initialise("managebookslink");Get
 
 .GeneralPageLayout {
 	padding: 1.5rem;
-	position: absolute;
+	margin-top: 1rem;
 	background-color: white;
 	width: 100%;
-	height: calc(100% - 3.5rem);
+	height: 100%;
 	overflow: hidden;
 }
 
@@ -694,7 +694,6 @@ h1 {
 <body>
 <!-- The navigation bar config -->
  <div id='tpnav' class="topnav"></div>
-<div id="StateBanner"></div>
 <div id="BookInfoPage" class="GeneralPageLayout">
 	<h1><input id="fuzzysearchlist" oninput="fuzzysearchbooks(this);" class="inputHeader" type="text" placeholder="Search for books"></input></h1>
 <div style="width: 100%;height: 0.2rem;background-color: black;"></div>
