Started to implement starting page

--- a/web/guest_index.html
+++ b/web/guest_index.html
@@ -9,6 +9,25 @@
     <title>Home - clas digital</title>
 
     <script src='user.js'></script>
+<style>
+body {
+    background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.8)), url("/clasdigital.png");;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.GeneralPageLayout {
+    width: 100%;
+    text-align: center;
+}
+
+.GeneralPageLayout p {
+    width: 40vw;
+    margin: auto;
+    margin-top: 6.5rem;
+    font-size: large;
+}
+
+</style>
 <link href="topnav.css" rel="stylesheet" type="text/css">
 <script>
 window.addEventListener("load",function(){User.initialise("homelink");},false);
@@ -16,4 +35,13 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
   </head>
 <body>
  <div id='tpnav' class="topnav"></div>
+ <div class="GeneralPageLayout">
+     <p>Die Cultural and Literary Animal Studies (CLAS) widmen sich unter einer kultur-, literatur- und wissensgeschichtlichen Perspektive dem Fragefeld der Tiere. 
+clas digital bietet eine Forschungsbibliographie zu den Cultural and Literary Animal Studies sowie Volltexte aus der Geschichte des Tierwissens, mit Konzentration auf die Naturkunde/Zoologie zwischen 1750 und 1850. 
+     </p>
+     <p>
+Die Forschungsbibliographie erschließt die geistes- und kulturwissenschaftliche Tierforschung in ihrer disziplinären Vielfalt, gleichwohl ist sie weder vollständig noch ausgewogen; vielmehr trägt sie deutlich die Spuren ihres Entstehungskontextes, d.h. der Neueren Deutschen Literaturgeschichte.  
+Die Forschungsbibliographie wird ständig erweitert. Hinweise nehmen wir sehr gerne auf, bitte per Mail an jan.dick@bdp.de.
+     </p>
+ </div>
 </body>
