Improved layout a little bit

--- a/web/guest_index.html
+++ b/web/guest_index.html
@@ -23,6 +23,7 @@ body {
 .GeneralPageLayout p {
     width: 40vw;
     margin: auto;
+    padding: 1rem;
     margin-top: 6.5rem;
     font-size: large;
 }
