--- a/web/Search.html
+++ b/web/Search.html
@@ -310,7 +310,7 @@ function ShowSelectedValues(obj)
 {
 	let json = obj.drawablejson;
 	obj.innerHTML = "";
-					 document.getElementById("ResultBanner").innerHTML =  "<div style='margin-top: 2rem;margin-bottom:0;'><button class='specialultbut' onclick='OpenFilter();return true;' style='background:white;margin-right: 0.5rem;border: 0;'>Filter Results</button><button class='specialultbut' style='background:white;border: 0;' onclick='CreateBibliography();return true;'>Create Bibliography</button></div><hr style='padding: 0;'><span style='color: grey;'>"+json.books.length+" Ergebnisse</span>";
+					 document.getElementById("ResultBanner").innerHTML =  "<div style='margin-top: 2rem;margin-bottom:0;'><button class='specialultbut' onclick='OpenFilter();return true;' style='background:white;margin-right: 0.5rem;border: 0;'>Filter Results</button><button class='specialultbut' style='background:white;border: 0;' onclick='CreateBibliography();return true;'>Create Bibliography</button></div><hr style='padding: 0;'><span style='color: grey;'>"+json.max_results+" Ergebnisse</span>";
 	//"<h1 class='headerStyle'>Search Results for: \""+lastInput+"\", "+json.books.length+" matches<a class='citationButton' onclick='OpenFilter();return true;'>Filter results</a><a class='buttontwo citationButton' style='margin-left: 1rem' onclick='CreateBibliography();return true;'>Create Bibliography</a></h1>";
 	//json.show_from = 0;
 	//json.show_to = Math.min(10,json.books.length);
@@ -345,67 +345,28 @@ function ShowSelectedValues(obj)
 			inner+=json.books[i].bibliography;
 			inner+="</div><p style='text-align: left;' id='";
 			inner+=json.books[i].scanId;
-			inner+="-preview'>Preview loading...</p>";
+			inner+="-preview'>"+json.books[i].preview+"</p>";
 			newList.innerHTML = inner;
 			//Show the new link in the search hit list
 			obj.appendChild(newList);
 	}
 	
-	let val = "<h1 id='realHeader' class='headerStyle'>"
-	if(json.show_from>0)
-	{
-		val+="<img style='float:left;margin-left:0;padding-left:0;cursor:pointer;' onclick='SelectNextSlice(false);return true;' src='/next.svg'>";
-	}
-	
-										
-	val+="Show result from "+json.show_from+"-"+json.show_to;
-	if(json.show_from>0||json.show_to<json.books.length)
-	{
-		val+="<img style='cursor:pointer;margin-left:0.5rem;top:0;' onclick='SelectAllSlice();' src='/down.svg'>";
-	}
-	else if(json.show_from==0&&json.show_to==json.books.length&&json.books.length>10)
-	{
-		val+="<img style='cursor:pointer;margin-left:0.5rem;top:0;' onclick='SelectSmallSlice();' src='/up.svg'>";
-	}
-	
-	if(json.show_to<json.books.length)
-	{
-		val+="<img src='/last.svg' onclick='SelectNextSlice(true);return true;' style='float:right;cursor:pointer;'>";
-	}
-	
-	val+="</h1>";
-	//let val="<hr>";
-	obj.innerHTML+=val;
-	
-	let requ = "/getBookPreviews?query="+encodeURIComponent(lastInput);
-	requ+="&fuzzyness=";
-	requ+=document.getElementById("FuzzyID").value;
-	requ+="&books=";
-	SpecialFunctionWhatever(gCurrentSearchId,requ,JSON.parse(JSON.stringify(bookvalues.reverse())));
+    let val = "<hr>";
+    let counter = 1;
+    for(let i = 0; i < json.max_results; i+=10)
+    {
+	let lnk = window.location.search;
+	lnk = lnk.substr(0,lnk.lastIndexOf('=')+1);
+	lnk+=counter;
+	if(json.page==counter)
+	    val+="<a style='margin-right: 1rem;' disabled>"+counter+"</a>";
+	  else
+	    val+="<a style='margin-right: 1rem;' href='"+lnk+"'>"+counter+"</a>";
+	counter++;
+    }
+    obj.innerHTML+=val;
 }
 
-async function SpecialFunctionWhatever(startaddr,addr,booklist)
-{
-	if((booklist == [])||(startaddr!=gCurrentSearchId))
-	{
-		return 0;
-	}
-	let bk = booklist.pop();
-	if(bk==undefined)
-		return 0;
-	let requ = addr+bk;
-	let xhr = new XMLHttpRequest();
-	xhr.open("GET",requ,true);
-	xhr.onload = function() {
-		if(xhr.status!=200)
-			return;
-		let resp = JSON.parse(xhr.responseText);
-
-		document.getElementById(resp.books[0].key+"-preview").innerHTML = resp.books[0].preview;
-		SpecialFunctionWhatever(startaddr,addr,booklist);
-	}
-	xhr.send(null);
-}
 
 function SelectSmallSlice()
 {
@@ -484,6 +445,7 @@ function sendToPage(name)
 			val+=myList[i].dataset.key;
 		}
 	}
+	val+="&page=1";
 	requ+=val;	
 
        	window.location = requ;
@@ -591,7 +553,16 @@ function ResetToDefault()
 	}
 }
 
-       window.addEventListener("load",function(){User.initialise('searchlink');},false);
+       window.addEventListener("load",function(){User.initialise('searchlink');ShowLinks();},false);
+
+function ShowLinks()
+{
+    let obj = document.getElementById("SearchHitList");
+    obj.drawablejson = ServerDataObj.search;
+    obj.drawablejson.show_from = 0;
+    obj.drawablejson.show_to = Math.min(obj.drawablejson.books.length,10);
+    ShowSelectedValues(obj);
+}
 		</script>
 		<style>
 
